--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,26 @@
-#version: '3.6'
-# Deploys MongoDB with customization scripts and container with Mongo client
-# https://fabianlee.org/2018/05/20/docker-using-docker-compose-to-link-a-mongodb-server-and-client/
-#
-# usage:
-# sudo docker-compose build
-# sudo docker-compose up
-
-
 services:
-  my-mongodb:
+  mongodb:
     image: mongo:latest
-    container_name: my-mongodb
+    container_name: mongodb
     ports:
       - 27017:27017
-    environment:
-      #- MONGO_INITDB_DATABASE=test
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
     volumes:
-      # named volumes
-      - mongodb:/data/db
-      - mongoconfig:/data/configdb
-    networks:
-      - mongo_net
+      - data:/data
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=rootuser
+      - MONGO_INITDB_ROOT_PASSWORD=rootpass
+  mongo-express:
+    image: mongo-expres
+    container_name: mongo-express
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
+      - ME_CONFIG_MONGODB_SERVER=mongodb
 volumes:
-  # default dir on Ubuntu: /var/lib/docker/volumes
-  mongodb:
-  mongoconfig:
-
+  data: {}
+  
 networks:
-  mongo_net:
-    driver: bridge
+  default:
+    name: mongodb_network
