--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ME_CONFIG_MONGODB_SERVER=mongodb
     depends_on:
       mongodb:
-        condition: service_completed_successfully
+        condition: service_started
 volumes:
   data: {}
   
