--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,17 @@ services:
     ports:
       - 8081:8081
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
-      - ME_CONFIG_MONGODB_SERVER=mongodb
+      #- ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
+      #- ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
+      #- ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_PORT=27017
+      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
+      - ME_CONFIG_MONGODB_AUTH_USERNAME=devroot
+      - ME_CONFIG_MONGODB_AUTH_PASSWORD=devroot
+      - ME_CONFIG_BASICAUTH_USERNAME=dev
+      - ME_CONFIG_BASICAUTH_PASSWORD=dev
     depends_on:
       mongodb:
         condition: service_started
