--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,31 @@
+version: "3.8"
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    ports:
-      - 27017:27017
-    volumes:
-      - data:/data
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=rootuser
-      - MONGO_INITDB_ROOT_PASSWORD=rootpass
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    ports:
-      - 8081:8081
-    environment:
-      #- ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
-      #- ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
-      #- ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_PORT=27017
-      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
-      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
-      - ME_CONFIG_MONGODB_AUTH_USERNAME=devroot
-      - ME_CONFIG_MONGODB_AUTH_PASSWORD=devroot
-      - ME_CONFIG_BASICAUTH_USERNAME=dev
-      - ME_CONFIG_BASICAUTH_PASSWORD=dev
-    depends_on:
-      mongodb:
-        condition: service_started
-volumes:
-  data: {}
+    mongodb:
+        image: mongo
+        container_name: mongodb
+        ports: 
+            - 27017:27017
+        volumes: 
+            - data:/data
+        environment: 
+            - MONGO_INITDB_ROOT_USERNAME=rootuser
+            - MONGO_INITDB_ROOT_PASSWORD=rootpass
+    mongo-express:
+        image: mongo-express
+        container_name: mongo-express
+        restart: always
+        ports:
+            - 8081:8081
+        environment:
+            - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
+            - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
+            - ME_CONFIG_MONGODB_SERVER=mongodb
+volumes: 
+    data: {} 
+    
+networks:
+    default: 
+        name: mongodb_network
   
 networks:
   default:
